--- a/index.html
+++ b/index.html
@@ -3,27 +3,22 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>AgriNexus World - PWA</title>
-  <link rel="manifest" href="manifest.json" />
-  <meta name="theme-color" content="#2b6cb0" />
+  <title>AgriNexus Email Sender</title>
   <script>
-    if ('serviceWorker' in navigator) {
-      window.addEventListener('load', () => {
-        navigator.serviceWorker.register('service-worker.js');
-      });
+    async function sendEmail() {
+      const email = document.getElementById('email').value;
+      if (!email || !email.includes('@')) {
+        alert('유효한 이메일 주소를 입력하세요.');
+        return;
+      }
+      alert(`📧 ${email} 주소로 보고서 전송 요청됨 (샘플용 UI)`); // 실제는 API 호출 필요
     }
   </script>
 </head>
 <body>
-  <h1>🌱 AgriNexus World</h1>
-  <p>이 사이트는 설치 가능한 PWA 앱입니다.</p>
-  <ul>
-    <li><a href="/report/">📑 보고서</a></li>
-    <li><a href="/contract/">📝 계약서</a></li>
-    <li><a href="/admin/">🔐 관리자</a></li>
-  </ul>
-  <footer>
-    <p>© 2025 AgriNexus World</p>
-  </footer>
+  <h1>📬 이메일 전송 시스템</h1>
+  <p>이메일 주소를 입력하면 보고서/계약서를 전송합니다.</p>
+  <input type="email" id="email" placeholder="you@example.com" />
+  <button onclick="sendEmail()">메일 전송</button>
 </body>
 </html>
