--- a/admin/index.html
+++ b/admin/index.html
@@ -1,1 +1,56 @@
-<h1>🔐 관리자 대시보드</h1><p>수익 분석, 기능 제어, 로그 추적 제공</p>
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+  <meta charset="UTF-8">
+  <title>AgriNexus 관리자 대시보드</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <style>
+    body { font-family: sans-serif; padding: 2em; background: #f9f9f9; }
+    h1 { color: #2b6cb0; }
+    section { background: white; padding: 1em; margin-top: 1em; border-radius: 8px; box-shadow: 0 0 5px rgba(0,0,0,0.1); }
+    ul { line-height: 1.8em; }
+  </style>
+</head>
+<body>
+  <h1>🔐 AgriNexus 관리자 대시보드</h1>
+
+  <section>
+    <h2>📊 수익 요약</h2>
+    <ul>
+      <li>오늘 수익: 2,140,000원</li>
+      <li>월 누적 수익: 18,920,000원</li>
+      <li>예상 연간 매출: 230,000,000원</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>👥 방문자 통계</h2>
+    <ul>
+      <li>오늘 방문자: 112명</li>
+      <li>이번 주 방문자: 1,040명</li>
+      <li>이번 달 방문자: 3,920명</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>🛠 최근 업데이트 로그</h2>
+    <ul>
+      <li>📧 이메일 전송 기능 추가 (오늘)</li>
+      <li>📱 PWA 설치 기능 적용 (어제)</li>
+      <li>🌍 도메인 연결 완료: agrinexus.world</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>🤖 AI 추천 결과</h2>
+    <ul>
+      <li>추천 작물: 고수익 샐러드 채소, 베이비 리프</li>
+      <li>추천 지역: 전남 고흥, 호치민, 캘리포니아 중부</li>
+    </ul>
+  </section>
+
+  <footer>
+    <p>© 2025 AgriNexus World 관리자 전용</p>
+  </footer>
+</body>
+</html>
