--- a/index.html
+++ b/index.html
@@ -1,31 +1,24 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <title>AgriNexus 관리자 로그인</title>
+  <meta charset="UTF-8" />
+  <title>AgriNexus World - 통합 SaaS</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-auth-compat.js"></script>
+  <link rel="manifest" href="manifest.json">
   <script>
-    const firebaseConfig = {
-      apiKey: "YOUR_API_KEY",
-      authDomain: "YOUR_PROJECT.firebaseapp.com"
-    };
-    firebase.initializeApp(firebaseConfig);
-
-    function login() {
-      const email = document.getElementById('email').value;
-      const pw = document.getElementById('password').value;
-      firebase.auth().signInWithEmailAndPassword(email, pw)
-        .then(() => alert('✅ 로그인 성공'))
-        .catch(err => alert('❌ 로그인 실패: ' + err.message));
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('service-worker.js');
     }
   </script>
 </head>
 <body>
-  <h1>🔐 관리자 로그인</h1>
-  <input type="email" id="email" placeholder="이메일" /><br><br>
-  <input type="password" id="password" placeholder="비밀번호" /><br><br>
-  <button onclick="login()">로그인</button>
+  <h1>🌍 AgriNexus World | 통합형 스마트팜 플랫폼</h1>
+  <p>250단계 자동화 기능이 하나의 플랫폼에 통합되었습니다.</p>
+  <ul>
+    <li><a href="/report/">📑 보고서 생성</a></li>
+    <li><a href="/contract/">📝 계약서 자동화</a></li>
+    <li><a href="/admin/">📊 관리자 대시보드</a></li>
+    <li><a href="/login/">🔐 관리자 로그인</a></li>
+  </ul>
 </body>
 </html>
