--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
   <div class="container">
-    <h1 id="greeting">환영합니다, AgriNexus World</h1>
-    <p id="suggestion">환경에 따라 변화하는 스마트 플랫폼입니다.</p>
+    <h1 id="greeting">✅ AgriNexus World LIVE 작동 중</h1>
+    <p id="suggestion">환경에 따라 자동 변화하는 스마트 플랫폼입니다.</p>
     <nav>
       <a href="/report/">📑 보고서</a>
       <a href="/contract/">📄 계약서</a>
