--- a/contract/index.html
+++ b/contract/index.html
@@ -1,1 +1,1 @@
-<h1>📝 계약서 생성기</h1><p>계약 내용을 자동으로 작성합니다.</p>
+<!DOCTYPE html><html><head><meta charset='UTF-8'><title>contract</title><link rel='stylesheet' href='../style.css'></head><body class='container'><h1>📄 계약서 자동화</h1><p>계약 내용을 입력하고 자동 생성합니다.</p><input/><button>생성</button></body></html>
