--- a/index.html
+++ b/index.html
@@ -2,22 +2,19 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <title>AgriNexus World - LIVE</title>
+  <title>AgriNexus World</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <link rel="manifest" href="manifest.json" />
-  <meta name="theme-color" content="#1a202c" />
   <link rel="stylesheet" href="style.css" />
-  <script src="script.js" defer></script>
 </head>
 <body>
   <div class="container">
-    <h1 id="greeting">✅ AgriNexus World LIVE 작동 중</h1>
-    <p id="suggestion">환경에 따라 자동 변화하는 스마트 플랫폼입니다.</p>
+    <h1>🌤 AgriNexus World - 주간 모드</h1>
+    <p>환경에 따라 자동 변화하는 스마트 플랫폼입니다.</p>
     <nav>
-      <a href="/report/">📑 보고서</a>
-      <a href="/contract/">📄 계약서</a>
-      <a href="/login/">🔐 로그인</a>
-      <a href="/admin/">📊 관리자</a>
+      <a href="report/index.html">📑 보고서</a>
+      <a href="contract/index.html">📄 계약서</a>
+      <a href="login/index.html">🔐 로그인</a>
+      <a href="admin/index.html">📊 관리자</a>
     </nav>
   </div>
 </body>
