--- a/report/index.html
+++ b/report/index.html
@@ -1,1 +1,1 @@
-<h1>📑 보고서 생성기</h1><p>키워드 기반 AI 보고서를 생성합니다.</p>
+<!DOCTYPE html><html><head><meta charset='UTF-8'><title>report</title><link rel='stylesheet' href='../style.css'></head><body class='container'><h1>📑 보고서 생성</h1><p>키워드를 입력하세요.</p><input/><button>생성</button></body></html>
