--- a/admin/index.html
+++ b/admin/index.html
@@ -1,1 +1,6 @@
-<!DOCTYPE html><html><head><meta charset='UTF-8'><title>admin</title><link rel='stylesheet' href='../style.css'></head><body class='container'><h1>📊 관리자 대시보드</h1><ul><li>오늘 수익: 1,000,000원</li><li>방문자: 320명</li></ul></body></html>
+<!DOCTYPE html><html><head><meta charset='UTF-8'><link rel='stylesheet' href='../style.css'></head><body><h1>📊 관리자 대시보드</h1>
+<ul>
+  <li>오늘 수익: ₩1,000,000</li>
+  <li>방문자 수: 317명</li>
+  <li>AI 추천: 스마트 리프, 온실 토마토</li>
+</ul></body></html>
