--- a/index.html
+++ b/index.html
@@ -1,21 +1,7 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-  <meta charset="UTF-8" />
-  <title>AgriNexus World</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-  <div class="container">
-    <h1>🌤 AgriNexus World - 주간 모드</h1>
-    <p>환경에 따라 자동 변화하는 스마트 플랫폼입니다.</p>
-    <nav>
-      <a href="report/index.html">📑 보고서</a>
-      <a href="contract/index.html">📄 계약서</a>
-      <a href="login/index.html">🔐 로그인</a>
-      <a href="admin/index.html">📊 관리자</a>
-    </nav>
-  </div>
-</body>
-</html>
+<!DOCTYPE html><html><head><meta charset='UTF-8'><link rel='stylesheet' href='style.css'></head><body><h1>🌍 AgriNexus World</h1>
+<p>기능 전체 테스트 버전입니다.</p>
+<a href="report/index.html">📑 보고서 생성</a><br>
+<a href="contract/index.html">📄 계약서 자동화</a><br>
+<a href="login/index.html">🔐 로그인</a><br>
+<a href="admin/index.html">📊 관리자</a>
+</body></html>
