--- a/login/index.html
+++ b/login/index.html
@@ -1,1 +1,16 @@
-<!DOCTYPE html><html><head><meta charset='UTF-8'><title>login</title><link rel='stylesheet' href='../style.css'></head><body class='container'><h1>🔐 로그인</h1><input type='email' placeholder='이메일'><br><input type='password' placeholder='비밀번호'><br><button>로그인</button></body></html>
+<!DOCTYPE html><html><head><meta charset='UTF-8'><link rel='stylesheet' href='../style.css'></head><body><h1>🔐 로그인</h1>
+<input id="email" placeholder="이메일"><br>
+<input id="pw" type="password" placeholder="비밀번호"><br>
+<button onclick="login()">로그인</button>
+<div id="output"></div>
+<script>
+function login() {
+  const e = document.getElementById('email').value;
+  const p = document.getElementById('pw').value;
+  if (!e.includes("@") || p.length < 4) {
+    document.getElementById('output').innerText = "❌ 올바른 정보를 입력하세요.";
+  } else {
+    document.getElementById('output').innerText = "✅ 로그인 시도 중...";
+  }
+}
+</script></body></html>
