--- a/index.html
+++ b/index.html
@@ -1,7 +1,50 @@
-<!DOCTYPE html><html><head><meta charset='UTF-8'><link rel='stylesheet' href='style.css'></head><body><h1>🌍 AgriNexus World</h1>
-<p>기능 전체 테스트 버전입니다.</p>
-<a href="report/index.html">📑 보고서 생성</a><br>
-<a href="contract/index.html">📄 계약서 자동화</a><br>
-<a href="login/index.html">🔐 로그인</a><br>
-<a href="admin/index.html">📊 관리자</a>
-</body></html>
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>AgriNexus World</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header>
+    <h1>🌱 AgriNexus World</h1>
+    <p>당신의 사무실 없는 자동화 스마트팜 기업</p>
+  </header>
+  <section class="grid">
+    <div class="card">
+      <h3>📑 보고서 생성</h3>
+      <p>AI 기반 보고서를 자동으로 생성합니다.</p>
+      <a href="/report/">바로가기</a>
+    </div>
+    <div class="card">
+      <h3>📄 계약서 자동화</h3>
+      <p>입력만 하면 자동으로 계약서가 완성됩니다.</p>
+      <a href="/contract/">바로가기</a>
+    </div>
+    <div class="card">
+      <h3>📊 관리자 대시보드</h3>
+      <p>실시간 수익, 방문자, 추천 정보를 시각화합니다.</p>
+      <a href="/admin/">바로가기</a>
+    </div>
+    <div class="card">
+      <h3>🔐 로그인</h3>
+      <p>Firebase 기반 인증 시스템</p>
+      <a href="/login/">바로가기</a>
+    </div>
+    <div class="card">
+      <h3>🤖 AI 추천 시스템</h3>
+      <p>위치, 계절, 환경 기반 스마트 작물 추천</p>
+      <a href="#">준비 중</a>
+    </div>
+    <div class="card">
+      <h3>📦 자동화 물류 연동</h3>
+      <p>설치부터 배송까지 전자동 연계</p>
+      <a href="#">준비 중</a>
+    </div>
+  </section>
+  <footer>
+    <p>© 2025 AgriNexus World | 사무실 없는 자동화 기업</p>
+  </footer>
+</body>
+</html>
