--- a/index.html
+++ b/index.html
@@ -2,49 +2,28 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
+  <title>AgriNexus World - 전략적 메인 V2</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>AgriNexus World</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <h1>🌱 AgriNexus World</h1>
-    <p>당신의 사무실 없는 자동화 스마트팜 기업</p>
+    <h1>🌍 AgriNexus World</h1>
+    <p>AI 기반 농업 자동화의 글로벌 표준</p>
   </header>
   <section class="grid">
-    <div class="card">
-      <h3>📑 보고서 생성</h3>
-      <p>AI 기반 보고서를 자동으로 생성합니다.</p>
-      <a href="/report/">바로가기</a>
-    </div>
-    <div class="card">
-      <h3>📄 계약서 자동화</h3>
-      <p>입력만 하면 자동으로 계약서가 완성됩니다.</p>
-      <a href="/contract/">바로가기</a>
-    </div>
-    <div class="card">
-      <h3>📊 관리자 대시보드</h3>
-      <p>실시간 수익, 방문자, 추천 정보를 시각화합니다.</p>
-      <a href="/admin/">바로가기</a>
-    </div>
-    <div class="card">
-      <h3>🔐 로그인</h3>
-      <p>Firebase 기반 인증 시스템</p>
-      <a href="/login/">바로가기</a>
-    </div>
-    <div class="card">
-      <h3>🤖 AI 추천 시스템</h3>
-      <p>위치, 계절, 환경 기반 스마트 작물 추천</p>
-      <a href="#">준비 중</a>
-    </div>
-    <div class="card">
-      <h3>📦 자동화 물류 연동</h3>
-      <p>설치부터 배송까지 전자동 연계</p>
-      <a href="#">준비 중</a>
-    </div>
+    <div class="card"><h3>📑 보고서 생성</h3><p>AI 기반 보고서를 자동으로 생성합니다.</p><a href="/report/">바로가기</a></div>
+    <div class="card"><h3>📄 계약서 자동화</h3><p>입력만 하면 자동으로 계약서가 완성됩니다.</p><a href="/contract/">바로가기</a></div>
+    <div class="card"><h3>📊 관리자 대시보드</h3><p>실시간 수익, 방문자, 추천 정보를 시각화합니다.</p><a href="/admin/">바로가기</a></div>
+    <div class="card"><h3>🔐 로그인</h3><p>Firebase 인증 시스템</p><a href="/login/">바로가기</a></div>
+    <div class="card"><h3>🤖 AI 추천 시스템</h3><p>위치, 계절, 환경 기반 스마트 작물 추천</p><a href="#">준비 중</a></div>
+    <div class="card"><h3>🚚 자동화 물류 연동</h3><p>설치부터 배송까지 전자동 연계</p><a href="#">준비 중</a></div>
+    <div class="card"><h3>🛰️ 위성 기반 설치</h3><p>설치 부지 자동 분석 및 시뮬레이션</p><a href="#">준비 중</a></div>
+    <div class="card"><h3>💼 투자사 전용</h3><p>IR 자료 및 전용 보고서 열람</p><a href="#">준비 중</a></div>
+    <div class="card"><h3>📲 앱 설치 안내</h3><p>PWA 기반 설치형 앱 제공</p><a href="#">설치 안내</a></div>
   </section>
   <footer>
-    <p>© 2025 AgriNexus World | 사무실 없는 자동화 기업</p>
+    <p>© 2025 AgriNexus World | AI 기반 농업 자동화의 글로벌 표준</p>
   </footer>
 </body>
 </html>
