--- a/delivery/index.html
+++ b/delivery/index.html
@@ -1,16 +1,44 @@
-<!DOCTYPE html><html lang="ko">
-<head><meta charset="UTF-8"><title>🚚 물류 자동 추천</title>
-<link rel="stylesheet" href="../style.css" /></head>
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+  <meta charset="UTF-8" />
+  <title>🚚 배송 요금 예측기</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link rel="stylesheet" href="../style.css" />
+  <script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
+</head>
 <body>
-<h1>🚚 물류 자동 추천</h1>
-<input id="val" placeholder="입력하세요">
-<br><button onclick="generate()">실행</button>
-<div id="output"></div>
-<a id="download" style="display:none" download="delivery.txt">📥 저장</a>
+  <h1>🚚 배송 요금 예측기</h1>
+  <input id="val" placeholder="예: 20 (kg)">
+  <br>
+  <button onclick="generate()">📝 정보 분석</button>
+  <div id="output"></div>
+  <div class="actions">
+    <button onclick="download()">📥 PDF 저장</button>
+    <button onclick="sendEmail()">✉️ 이메일 제출</button>
+    <button onclick="store()">💾 관리자 저장</button>
+  </div>
 <script>
+let content = "";
 function generate() {
-  const w = document.getElementById('val').value;
-  const fee = parseInt(w) * 120;
-  document.getElementById('output').innerText = `📦 예상 배송 요금: ₩${fee}`;
-}</script>
-</body></html>
+  const v = document.getElementById('val').value;
+  const fee = parseInt(v) * 150; content = `예상 배송요금: ₩${fee}`; document.getElementById("output").innerText = content;
+}
+function download() {
+  if (!content) return alert("먼저 내용을 생성하세요.");
+  const { jsPDF } = window.jspdf;
+  const doc = new jsPDF();
+  doc.text(content, 10, 20);
+  doc.save("delivery.pdf");
+}
+function sendEmail() {
+  if (!content) return alert("먼저 내용을 생성하세요.");
+  alert("📨 이메일 제출 완료 (시뮬레이션)");
+}
+function store() {
+  if (!content) return alert("먼저 내용을 생성하세요.");
+  alert("✅ 관리자 저장 완료 (시뮬레이션)");
+}
+</script>
+</body>
+</html>
