--- a/report/index.html
+++ b/report/index.html
@@ -1,19 +1,48 @@
-<!DOCTYPE html><html lang="ko">
-<head><meta charset="UTF-8"><title>📑 보고서 생성</title>
-<link rel="stylesheet" href="../style.css" /></head>
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+  <meta charset="UTF-8" />
+  <title>📝 보고서 생성기</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link rel="stylesheet" href="/style.css" />
+  <script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
+</head>
 <body>
-<h1>📑 보고서 생성</h1>
-<input id="val" placeholder="입력하세요">
-<br><button onclick="generate()">실행</button>
-<div id="output"></div>
-<a id="download" style="display:none" download="report.txt">📥 저장</a>
+  <h1>📝 보고서 생성기</h1>
+  <input id="val" placeholder="예: 온실 가스 절감 효과">
+  <br>
+  <button onclick="generate()">📝 생성</button>
+  <div id="output"></div>
+  <div class="actions">
+    <button onclick="download()">📥 PDF 저장</button>
+    <button onclick="sendEmail()">✉️ 이메일 제출</button>
+    <button onclick="store()">💾 관리자 저장</button>
+  </div>
 <script>
+let content = "";
 function generate() {
   const v = document.getElementById('val').value;
-  const text = `🔎 "${v}"에 대한 스마트팜 분석 보고서입니다.\n- 성장 전략\n- 지역 기반 수요\n- 환경 대응 방안`;
-  document.getElementById('output').innerText = text;
-  const blob = new Blob([text], {type: 'text/plain'});
-  document.getElementById('download').href = URL.createObjectURL(blob);
-  document.getElementById('download').style.display = "inline-block";
-}</script>
-</body></html>
+  content = `요약 결과:\n${v} 관련 보고서 자동 생성 완료.`;
+document.getElementById("output").innerText = content;
+}
+
+function download() {
+  if (!content) return alert("먼저 내용을 생성하세요.");
+  const { jsPDF } = window.jspdf;
+  const doc = new jsPDF();
+  doc.text(content, 10, 20);
+  doc.save("report.pdf");
+}
+
+function sendEmail() {
+  if (!content) return alert("먼저 내용을 생성하세요.");
+  alert("📨 이메일 제출 완료 (시뮬레이션)");
+}
+
+function store() {
+  if (!content) return alert("먼저 내용을 생성하세요.");
+  alert("✅ 관리자 저장 완료 (시뮬레이션)");
+}
+</script>
+</body>
+</html>
