--- a/satellite/index.html
+++ b/satellite/index.html
@@ -2,16 +2,16 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <title>🛰️ 위성 위치 분석</title>
+  <title>🛰️ 위성 기반 설치 분석</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <link rel="stylesheet" href="../style.css" />
+  <link rel="stylesheet" href="/style.css" />
   <script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
 </head>
 <body>
-  <h1>🛰️ 위성 위치 분석</h1>
-  <input id="val" placeholder="예: 37.123,127.456">
+  <h1>🛰️ 위성 기반 설치 분석</h1>
+  <input id="val" placeholder="예: 34.123,126.456">
   <br>
-  <button onclick="generate()">📝 정보 분석</button>
+  <button onclick="generate()">📝 생성</button>
   <div id="output"></div>
   <div class="actions">
     <button onclick="download()">📥 PDF 저장</button>
@@ -22,9 +22,10 @@
 let content = "";
 function generate() {
   const v = document.getElementById('val').value;
-  content = `위도/경도 ${v} → 설치 적합 지역: 충북 괴산`;
+  content = `위도/경도 ${v} → 설치 가능 지역: 전라남도 해남`;
 document.getElementById("output").innerText = content;
 }
+
 function download() {
   if (!content) return alert("먼저 내용을 생성하세요.");
   const { jsPDF } = window.jspdf;
@@ -32,10 +33,12 @@ function download() {
   doc.text(content, 10, 20);
   doc.save("satellite.pdf");
 }
+
 function sendEmail() {
   if (!content) return alert("먼저 내용을 생성하세요.");
   alert("📨 이메일 제출 완료 (시뮬레이션)");
 }
+
 function store() {
   if (!content) return alert("먼저 내용을 생성하세요.");
   alert("✅ 관리자 저장 완료 (시뮬레이션)");
