--- a/signup/index.html
+++ b/signup/index.html
@@ -1,18 +1,47 @@
-<!DOCTYPE html><html lang="ko">
-<head><meta charset="UTF-8">
-<title>📝 신청서 작성</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<link rel="stylesheet" href="../style.css" /></head>
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+  <meta charset="UTF-8" />
+  <title>📝 사용자 신청 입력</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link rel="stylesheet" href="/style.css" />
+  <script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
+</head>
 <body>
-<h1>📝 신청서</h1>
-<input id="name" placeholder="성함 또는 기업명">
-<br><button onclick="goNext()">신청 완료</button>
+  <h1>📝 사용자 신청 입력</h1>
+  <input id="val" placeholder="예: 홍길동">
+  <br>
+  <button onclick="generate()">📝 생성</button>
+  <div id="output"></div>
+  <div class="actions">
+    <button onclick="download()">📥 PDF 저장</button>
+    <button onclick="sendEmail()">✉️ 이메일 제출</button>
+    <button onclick="store()">💾 관리자 저장</button>
+  </div>
 <script>
-function goNext() {
-  const v = document.getElementById("name").value;
-  localStorage.setItem("signup_name", v);
-  alert("✅ 신청 완료되었습니다.");
-  window.location.href = "/design/index.html";
+let content = "";
+function generate() {
+  const v = document.getElementById('val').value;
+  content = `신청자: ${v}님의 정보가 접수되었습니다.`; document.getElementById("output").innerText = content;
+}
+
+function download() {
+  if (!content) return alert("먼저 내용을 생성하세요.");
+  const { jsPDF } = window.jspdf;
+  const doc = new jsPDF();
+  doc.text(content, 10, 20);
+  doc.save("signup.pdf");
+}
+
+function sendEmail() {
+  if (!content) return alert("먼저 내용을 생성하세요.");
+  alert("📨 이메일 제출 완료 (시뮬레이션)");
+}
+
+function store() {
+  if (!content) return alert("먼저 내용을 생성하세요.");
+  alert("✅ 관리자 저장 완료 (시뮬레이션)");
 }
 </script>
-</body></html>
+</body>
+</html>
